create less files

--- a/less/style.less
+++ b/less/style.less
@@ -1,8 +1,24 @@
+@import "normalize.less";
+
 @import "helpers/variables.less";
 @import "helpers/mixins.less";
 
 @import "base/scaffolding.less";
 @import "base/typography.less";
 
-@import "blocks/header.less";
-@import "blocks/footer.less";
+@import "blocks/page-header.less";
+@import "blocks/logo.less";
+@import "blocks/navigation.less";
+@import "blocks/social.less";
+@import "blocks/greeting.less";
+
+@import "blocks/page-main.less";
+@import "blocks/about.less";
+@import "blocks/dishes.less";
+@import "blocks/tabs.less";
+@import "blocks/breakfast.less";
+@import "blocks/book.less";
+@import "blocks/best.less";
+
+@import "blocks/page-footer.less";
+@import "blocks/footer-nav.less";
