--- a/less/blocks/navigation.less
+++ b/less/blocks/navigation.less
@@ -1,8 +1,76 @@
 .navigation {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+
+  width: 100%;
+  min-height: 70px;
+
+  &--opened {
+    background-color: fade(#56534c, 90%);
+    height: 100%;
+  }
+}
+
+.navigation__toggle {
+  position: absolute;
+  z-index: 10;
+  top: 20px;
+  right: 20px;
   
+  border: none;
+  outline: none;
+  background-color: transparent;
+  font-size: 0;
+
+  &--closed { 
+    width: 23px;
+    height: 21px;
+    background-image: url("../img/icon_menu.png");
+  }
+
+  &--opened {
+    width: 23px;
+    height: 22px;
+    background-image: url("../img/icon_cross.png");
+  }
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.navigation__list {
+  position: absolute;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  padding-left: 20px;
+  box-sizing: border-box;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  list-style: none;
+
+  &--closed {
+    display: none;
+  }
 }
 
 .navigation__link {
+  display: block;
+  padding: 10px 0;
   color: white;
   text-decoration: none;
+  text-transform: uppercase;
+  font-family: "Alegreya", serif;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.3em;
 }
