--- a/less/base/scaffolding.less
+++ b/less/base/scaffolding.less
@@ -1,3 +1,24 @@
 html, body {
   margin: 0;
+  height: 100%;
+  min-width: 320px;
+}
+
+.button {
+  display: inline;
+  padding: 20px 55px;
+  text-decoration: none;
+  font-family: "Alegreya", serif;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 14px;
+  letter-spacing: 0.3em;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.no-scroll {
+  position: fixed;
+  overflow-y: scroll;
 }
