--- a/less/blocks/greeting.less
+++ b/less/blocks/greeting.less
@@ -1,11 +1,52 @@
+.greeting {
+  height: 100%;
+  margin-top: -70px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 5;
+}
+
 .greeting__title {
-    color: white;
+  margin: 0;
+  text-align: center;
+  color: white;
+  text-shadow: 0px 1px #3d3029;
+  font-family: "PlayfairDisplay", serif;
+  font-size: 46px;
+  letter-spacing: 0.075em;
+
+  &::after {
+    content: "";
+    display: block;
+    margin-top: 40px;
+    margin-bottom: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 160px;
+    height: 12px;
+    background-image: url("../img/dashed_line.png");
+    background-position: center center;
+  }
 }
 
 .greeting__description {
+  margin: 0;
+  margin-bottom: 60px;
+  text-align: center;
   color: white;
+  text-shadow: 0px 1px #3d3029;
+  font-family: "ProximaNova", sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 0.1em;
 }
 
 .greeting__link {
+  text-align: center;
   color: white;
+  background-color: fade(#56534c, 53%);
+  border: 1px dashed #9e9c93;
 }
+
