--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -1,3 +1,15 @@
+.social {
+  display: none;
+}
+
+.social__list {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .social__link {
   color: white;
   text-decoration: none;
