--- a/less/blocks/greeting.less
+++ b/less/blocks/greeting.less
@@ -1,6 +1,5 @@
 .greeting {
   height: 100%;
-  // margin-top: -70px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -46,7 +45,7 @@
 .greeting__link {
   text-align: center;
   color: white;
-  background-color: fade(#56534c, 53%);
+  background-color: fade(@gray, 53%);
   border: 1px dashed #9e9c93;
 }
 
