--- a/less/blocks/navigation.less
+++ b/less/blocks/navigation.less
@@ -8,7 +8,7 @@
   min-height: 70px;
 
   &--opened {
-    background-color: fade(#56534c, 90%);
+    background-color: fade(@gray, 90%);
     height: 100%;
   }
 }
