--- a/css/style.css
+++ b/css/style.css
@@ -466,6 +466,27 @@ body {
   background-image: url("../img/bg_header.jpg");
   background-position: center 0;
   background-size: cover;
+  border-bottom: 10px solid white;
+}
+.page-header:after,
+.page-header:before {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 50%);
+}
+.page-header:before {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-color: white;
+}
+.page-header:after {
+  width: 106px;
+  height: 106px;
+  background-image: url("../img/icon_bun.png");
 }
 .page-header__wrapper {
   max-width: 280px;
@@ -616,8 +637,178 @@ body {
   margin-right: auto;
 }
 .about {
+  padding-top: 70px;
   background-image: url("../img/bg_texture.jpg");
   background-position: 0 0;
+}
+.about__text-block {
+  max-width: 280px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.about__title {
+  margin: 0;
+  color: #56534c;
+  text-align: center;
+  font-family: "Alegreya", serif;
+  font-size: 48px;
+  line-height: 30px;
+  letter-spacing: 0.025em;
+  font-weight: bold;
+}
+.about__subtitle {
+  display: block;
+  margin-top: 10px;
+  color: #a47d5e;
+  text-align: center;
+  font-family: "Alegreya", serif;
+  font-size: 14px;
+  line-height: 30px;
+  letter-spacing: 0.1em;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.about__description {
+  margin: 0;
+  color: #56534c;
+  text-align: center;
+  font-family: "ProximaNova", sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.1em;
+  margin-top: 35px;
+}
+.about__pictures {
+  max-width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.about__item {
+  position: relative;
+  width: 295px;
+  height: 250px;
+  margin-bottom: 10px;
+}
+.about__item:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: block;
+  width: 273px;
+  height: 228px;
+  border: 5px solid white;
+}
+.about__slogan {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 279px;
+  height: 184px;
+  padding-top: 95px;
+  background-image: url("../img/subsrtare.png");
+  opacity: 0.9;
+  color: #c9b176;
+  text-align: center;
+  font-family: "Alegreya", serif;
+  font-size: 30px;
+  line-height: 36px;
+  letter-spacing: 0.05px;
+  text-transform: uppercase;
+}
+.quote {
+  margin: 0;
+  margin-bottom: 35px;
+}
+.quote__title {
+  color: #56534c;
+  text-align: center;
+  font-family: "Alegreya", serif;
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: bold;
+  letter-spacing: 0.025em;
+}
+.quote__author {
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.quote__author-photo {
+  border: 5px solid white;
+  border-radius: 50%;
+}
+.quote__author-name {
+  position: relative;
+  width: 80px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  color: #56534c;
+  text-align: center;
+  font-family: "Alegreya", serif;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: normal;
+  font-style: normal;
+  letter-spacing: 0.025em;
+}
+.quote__author-name:after,
+.quote__author-name:before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: #d7d5ca;
+}
+.quote__author-name:after {
+  bottom: 0;
+}
+.quote__author-name:before {
+  top: 0;
+}
+.quote__citation {
+  position: relative;
+  display: block;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  color: #a47d5e;
+  text-align: center;
+  quotes: none;
+  font-family: "Scriptina", serif;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.025em;
+}
+.quote__citation:after,
+.quote__citation:before {
+  position: absolute;
+  display: block;
+  height: 15px;
+  color: #b6b5b2;
+  font-size: 60px;
+  line-height: 45px;
+  font-family: "Times New Roman", sans-serif;
+  letter-spacing: 0.025em;
+}
+.quote__citation:before {
+  content: "\201c";
+  top: 0;
+  left: 0;
+}
+.quote__citation:after {
+  content: "\201f";
+  bottom: 0;
+  right: 0;
+  transform: rotate(180deg);
 }
 .page-footer {
   max-width: 320px;
