--- a/less/helpers/mixins.less
+++ b/less/helpers/mixins.less
@@ -3,3 +3,37 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.style-title(@color: @gray) {
+  margin: 0;
+  color: @color;
+  text-align: center;
+  font-family: "Alegreya", serif;
+  font-size: 48px;
+  line-height: 30px;
+  letter-spacing: 0.025em;
+  font-weight: bold;
+}
+
+.style-subtitle(@color: @brown) {
+  display: block;
+  margin-top: 10px;
+  color: @color;
+  text-align: center;
+  font-family: "Alegreya", serif;
+  font-size: 14px;
+  line-height: 30px;
+  letter-spacing: 0.1em;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.style-description(@color: @gray) {
+  margin: 0;
+  color: @color;
+  text-align: center;
+  font-family: "ProximaNova", sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.1em;
+}
