--- a/less/style.less
+++ b/less/style.less
@@ -14,6 +14,7 @@
 
 @import "blocks/page-main.less";
 @import "blocks/about.less";
+@import "blocks/quote.less";
 @import "blocks/dishes.less";
 @import "blocks/tabs.less";
 @import "blocks/breakfast.less";
