--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -5,28 +5,28 @@
   background-image: url("../img/bg_header.jpg");
   background-position: center 0;
   background-size: cover;
-  border-bottom: 10px solid white;
-  &:after, &:before {
-    content: "";
-    display: block;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translate(-50%, 50%);
-  }
+  // border-bottom: 10px solid white;
+  // &:after, &:before {
+  //   content: "";
+  //   display: block;
+  //   position: absolute;
+  //   bottom: 0;
+  //   left: 50%;
+  //   transform: translate(-50%, 50%);
+  // }
 
-  &:before {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    background-color: white;
-  }
+  // &:before {
+  //   width: 80px;
+  //   height: 80px;
+  //   border-radius: 50%;
+  //   background-color: white;
+  // }
 
-  &:after {
-    width: 106px;
-    height: 106px;
-    background-image: url("../img/icon_bun.png");
-  }
+  // &:after {
+  //   width: 106px;
+  //   height: 106px;
+  //   background-image: url("../img/icon_bun.png");
+  // }
 }
 
 .page-header__wrapper {
