--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -36,6 +36,10 @@
   height: 250px;
   margin-bottom: 10px;
 
+  &:nth-child(-n + 2) {
+    display: none;
+  }
+
   &:after {
     content: "";
     position: absolute;
