style dishes-block

--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -6,7 +6,7 @@
   background-position: center 0;
   background-size: cover;
   // border-bottom: 10px solid white;
-  // &:after, &:before {
+  // &::after, &::before {
   //   content: "";
   //   display: block;
   //   position: absolute;
@@ -15,14 +15,14 @@
   //   transform: translate(-50%, 50%);
   // }
 
-  // &:before {
+  // &::before {
   //   width: 80px;
   //   height: 80px;
   //   border-radius: 50%;
   //   background-color: white;
   // }
 
-  // &:after {
+  // &::after {
   //   width: 106px;
   //   height: 106px;
   //   background-image: url("../img/icon_bun.png");
