--- a/css/style.css
+++ b/css/style.css
@@ -427,6 +427,9 @@ body {
   transform: translateX(-50%);
   overflow-y: scroll;
 }
+.visually-hidden {
+  display: none;
+}
 @font-face {
   font-family: "Scriptina";
   src: url("../fonts/scriptina.ttf");
@@ -742,8 +745,8 @@ body {
   font-style: normal;
   letter-spacing: 0.025em;
 }
-.quote__author-name:after,
-.quote__author-name:before {
+.quote__author-name::after,
+.quote__author-name::before {
   content: "";
   display: block;
   position: absolute;
@@ -751,10 +754,10 @@ body {
   height: 1px;
   background-color: #d7d5ca;
 }
-.quote__author-name:after {
+.quote__author-name::after {
   bottom: 0;
 }
-.quote__author-name:before {
+.quote__author-name::before {
   top: 0;
 }
 .quote__citation {
@@ -770,8 +773,8 @@ body {
   line-height: 30px;
   letter-spacing: 0.025em;
 }
-.quote__citation:after,
-.quote__citation:before {
+.quote__citation::after,
+.quote__citation::before {
   position: absolute;
   display: block;
   height: 15px;
@@ -781,16 +784,207 @@ body {
   font-family: "Times New Roman", sans-serif;
   letter-spacing: 0.025em;
 }
-.quote__citation:before {
+.quote__citation::before {
   content: "\201c";
   top: 0;
   left: 0;
 }
-.quote__citation:after {
+.quote__citation::after {
   content: "\201f";
   bottom: 0;
   right: 0;
   transform: rotate(180deg);
+}
+.dishes {
+  padding-top: 60px;
+  padding-bottom: 90px;
+  background-image: url("../img/bg_dishes.jpg");
+  background-position: center 0;
+  background-size: cover;
+}
+.dishes__wrapper {
+  max-width: 280px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+.dishes__item {
+  position: relative;
+  z-index: 0;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
+}
+.dishes__item::after {
+  position: absolute;
+  z-index: 20;
+  bottom: 0;
+  left: 0;
+  content: "";
+  display: block;
+  width: 0px;
+  height: 0px;
+  border: 11.5px solid white;
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+}
+.dishes__item--hidden {
+  display: none;
+}
+.dishes__image {
+  width: 100%;
+  height: auto;
+}
+.dishes__description {
+  padding: 40px 15px;
+  padding-top: 110px;
+  background-color: white;
+  background-image: url("../img/windmill.png");
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: bottom;
+}
+.dishes__title {
+  margin: 0;
+  color: #56534c;
+  text-align: center;
+  font-family: "Alegreya", serif;
+  font-size: 48px;
+  line-height: 30px;
+  letter-spacing: 0.025em;
+  font-weight: bold;
+  font-size: 36px;
+}
+.dishes__subtitle {
+  display: block;
+  margin-top: 10px;
+  color: #a47d5e;
+  text-align: center;
+  font-family: "Alegreya", serif;
+  font-size: 14px;
+  line-height: 30px;
+  letter-spacing: 0.1em;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.dishes__text {
+  margin: 0;
+  color: #56534c;
+  text-align: center;
+  font-family: "ProximaNova", sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.1em;
+  margin-top: 20px;
+}
+.dishes__time {
+  position: absolute;
+  right: -10px;
+  bottom: -40px;
+  z-index: 20;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 120px;
+  height: 120px;
+  background-color: white;
+  background-image: url("../img/fields.jpg");
+  background-size: contain;
+  font-family: "Alegreya", serif;
+}
+.dishes__time-text {
+  color: #a47d5e;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 30px;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+}
+.dishes__time-value {
+  margin: 0;
+  color: #dfc691;
+  font-size: 62px;
+  line-height: 50px;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+}
+.dishes__time-unit {
+  color: #979285;
+  text-transform: lowercase;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+}
+.dishes__tabs {
+  position: absolute;
+  top: 30px;
+}
+.tabs {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.tabs__arrow {
+  position: relative;
+  font-size: 0;
+  width: 26px;
+  height: 26px;
+  background-color: transparent;
+  border: 2px solid #d9bca5;
+  border-radius: 50%;
+  outline: none;
+}
+.tabs__arrow:hover {
+  cursor: pointer;
+}
+.tabs__arrow--prev {
+  margin-left: 10px;
+}
+.tabs__arrow--next {
+  margin-right: 10px;
+}
+.tabs__arrow::after {
+  position: absolute;
+  top: 6px;
+  content: "";
+  display: block;
+  width: 7px;
+  height: 7px;
+  border: 2px solid #d9bca5;
+  transform: rotate(45deg);
+}
+.tabs__arrow--prev::after {
+  left: 7px;
+  border-top-color: transparent;
+  border-right-color: transparent;
+}
+.tabs__arrow--next::after {
+  left: 3px;
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+}
+.tabs__list {
+  margin: 0;
+  padding: 0;
+  width: 240px;
+  margin-left: auto;
+  margin-right: auto;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  font-size: 0;
+}
+.tabs__item {
+  padding: 0 10px;
+}
+.tabs__image {
+  width: 50px;
+  height: 50px;
 }
 .page-footer {
   max-width: 320px;
