--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -2,6 +2,7 @@
   .container();
   position: relative;
   height: 100%;
+  background-color: #979995;
   background-image: url("../img/bg_header.jpg");
   background-position: center 0;
   background-size: cover;
