--- a/less/blocks/tabs.less
+++ b/less/blocks/tabs.less
@@ -9,12 +9,13 @@
 .tabs__arrow {
   position: relative;
   font-size: 0;
-  width: 26px;
-  height: 26px;
+  width: 25px;
+  height: 25px;
   background-color: transparent;
   border: 2px solid #d9bca5;
   border-radius: 50%;
   outline: none;
+  box-sizing: border-box;
 
   &:hover {
     cursor: pointer;
@@ -33,29 +34,33 @@
     top: 6px;
     content: "";
     display: block;
-    width: 7px;
-    height: 7px;
+    width: 5px;
+    height: 5px;
     border: 2px solid #d9bca5;
     transform: rotate(45deg);
   }
 
   &--prev::after {
-    left: 7px;
+    left: 8px;
     border-top-color: transparent;
     border-right-color: transparent;
   }
 
   &--next::after {
-    left: 3px;
+    left: 4px;
     border-bottom-color: transparent;
     border-left-color: transparent;
+  }
+
+  &--disabled {
+    filter: grayscale(1);
   }
 }
 
 .tabs__list {
   margin: 0;
   padding: 0;
-  width: 240px;
+  width: 210px;
   margin-left: auto;
   margin-right: auto;
   overflow-x: hidden;
@@ -67,6 +72,10 @@
 
 .tabs__item {
   padding: 0 10px;
+
+  &--active .tabs__image  {
+    filter: brightness(40%);
+  }
 }
 
 .tabs__image {
