--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -1,5 +1,6 @@
 .about {
   padding-top: 60px;
+  padding-bottom: 50px;
   background-color: #fcfbf8;
   background-image: url("../img/bg_texture.jpg");
   background-position: 0 0;
