--- a/less/blocks/dishes.less
+++ b/less/blocks/dishes.less
@@ -18,10 +18,7 @@
   display: flex;
   flex-direction: column-reverse;
   justify-content: center;
-  box-shadow: 0px -20px 40px -15px rgba(0,0,0,.2),
-  20px 10px 40px -10px rgba(0,0,0,.2),
-  -25px -10px 40px -15px rgba(0,0,0,.2),
-  10px 25px 40px -15px rgba(0,0,0,.2);
+  filter: drop-shadow(0px 0px 15px rgba(0,0,0,0.3));
   
 
   &::after {
@@ -38,7 +35,6 @@
     border-right-color: transparent;
     border-top-color: transparent;
     transform: rotate(45deg);
-    box-shadow: 0 25px 40px -10px rgba(0,0,0,.4);
   }
 
 
@@ -98,8 +94,8 @@
 .dishes__time-text {
   color: @brown;
   text-transform: uppercase;
-  font-size: 14px;
-  line-height: 30px;
+  font-size: 12px;
+  line-height: 20px;
   font-weight: bold;
   letter-spacing: 0.1em;
 }
@@ -107,8 +103,8 @@
 .dishes__time-value {
   margin: 0;
   color: #dfc691;
-  font-size: 62px;
-  line-height: 50px;
+  font-size: 48px;
+  line-height: 35px;
   font-weight: bold;
   letter-spacing: 0.1em;
 }
@@ -117,7 +113,7 @@
   color: #979285;
   text-transform: lowercase;
   font-size: 14px;
-  line-height: 20px;
+  line-height: 25px;
   font-weight: bold;
   letter-spacing: 0.1em;
 }
