--- a/css/style.css
+++ b/css/style.css
@@ -800,7 +800,7 @@ body {
 }
 .dishes {
   padding-top: 60px;
-  padding-bottom: 90px;
+  padding-bottom: 70px;
   background-color: #dfe0d7;
   background-image: url("../img/bg_dishes.jpg");
   background-position: center 0;
@@ -1001,6 +1001,94 @@ body {
 .tabs__image {
   width: 50px;
   height: 50px;
+}
+.breakfast {
+  padding-top: 60px;
+  padding-bottom: 70px;
+  background-color: #4a4e5f;
+  background-image: url("../img/bg_breakfast.jpg");
+  background-position: 23% 0;
+  background-size: cover;
+}
+.breakfast__menu {
+  max-width: 280px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.breakfast__title {
+  margin: 0;
+  color: white;
+  text-align: center;
+  font-family: "Alegreya", serif;
+  font-size: 48px;
+  line-height: 30px;
+  letter-spacing: 0.025em;
+  font-weight: bold;
+}
+.breakfast__subtitle {
+  display: block;
+  margin-top: 10px;
+  color: #c8a593;
+  text-align: center;
+  font-family: "Alegreya", serif;
+  font-size: 14px;
+  line-height: 30px;
+  letter-spacing: 0.1em;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 50px;
+}
+.breakfast__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.breakfast__item {
+  text-align: center;
+  padding-bottom: 50px;
+}
+.breakfast__item:not(:last-child) {
+  position: relative;
+}
+.breakfast__item:not(:last-child)::after {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  margin-left: -45px;
+  display: block;
+  width: 90px;
+  height: 27px;
+  content: "";
+  background-image: url("../img/icon_spikes.png");
+}
+.breakfast__name {
+  margin: 0;
+  margin-bottom: 10px;
+  color: white;
+  text-align: center;
+  font-family: "Alegreya", serif;
+  font-size: 30px;
+  line-height: 30px;
+  letter-spacing: 0.05em;
+  font-weight: bold;
+}
+.breakfast__description {
+  margin: 0;
+  margin-bottom: 20px;
+  color: #c2beba;
+  text-align: center;
+  font-family: "ProximaNova", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 0.05em;
+}
+.breakfast__cost {
+  color: #dfc691;
+  text-align: center;
+  font-family: "Alegreya", serif;
+  font-size: 36px;
+  line-height: 30px;
+  letter-spacing: 0.05em;
 }
 .page-footer {
   max-width: 320px;
