mobile css for book-block

--- a/css/style.css
+++ b/css/style.css
@@ -1003,11 +1003,23 @@ body {
   height: 50px;
 }
 .breakfast {
+  position: relative;
   padding-top: 60px;
   padding-bottom: 70px;
   background-color: #4a4e5f;
   background-image: url("../img/bg_breakfast.jpg");
   background-position: 23% 0;
+  background-size: cover;
+}
+.breakfast::after {
+  position: absolute;
+  right: 0;
+  bottom: 15px;
+  display: block;
+  width: 150px;
+  height: 146px;
+  content: "";
+  background-image: url("../img/spikes.png");
   background-size: cover;
 }
 .breakfast__menu {
@@ -1089,6 +1101,151 @@ body {
   font-size: 36px;
   line-height: 30px;
   letter-spacing: 0.05em;
+}
+.book {
+  position: relative;
+  max-width: 258px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #f3f1e9;
+  padding: 11px;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%, 0 90%);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%, 0 95%);
+}
+.book::before {
+  position: absolute;
+  top: 10px;
+  bottom: 10px;
+  left: 10px;
+  right: 10px;
+  content: "";
+  display: block;
+  width: auto;
+  height: auto;
+  border: 1px dashed #c3bfbb;
+}
+.book::after {
+  position: absolute;
+  z-index: 20;
+  bottom: 0px;
+  left: 0px;
+  content: "";
+  display: block;
+  width: 0px;
+  height: 0px;
+  border: 14px solid white;
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+  box-shadow: 4px -4px 25px -2px rgba(0, 0, 0, 0.15);
+}
+.book__page {
+  position: relative;
+  max-width: 260px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 30px;
+  padding-bottom: 60px;
+  background-color: #f3f1e9;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+.book__page--2,
+.book__page--3 {
+  display: none;
+}
+.book__date {
+  display: flex;
+  justify-content: space-between;
+  width: 140px;
+  color: #56534c;
+  font-family: "Alegreya", serif;
+  font-size: 14px;
+  line-height: 30px;
+  letter-spacing: 0.05em;
+  font-weight: bold;
+}
+.book__icon {
+  position: relative;
+  width: 100%;
+  height: 60px;
+}
+.book__icon-line {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  height: 1px;
+  background-color: #c3bfbb;
+}
+.book__icon-image {
+  position: absolute;
+  left: 50%;
+  margin-left: -30px;
+  top: 0;
+  z-index: 10;
+  width: 60px;
+  height: 60px;
+  background-color: #f3f1e9;
+  border: 1px solid #c3bfbb;
+  border-radius: 50%;
+  background-image: url('../img/icon_bagel.png');
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.book__icon::after,
+.book__icon::before {
+  position: absolute;
+  top: 50%;
+  margin-top: -6px;
+  content: "";
+  display: block;
+  width: 10px;
+  height: 10px;
+  background-color: #f3f1e9;
+  border: 1px solid #c3bfbb;
+  border-radius: 50%;
+}
+.book__icon::after {
+  right: 0;
+  z-index: 10;
+}
+.book__icon::before {
+  left: 0;
+  z-index: 10;
+}
+.book__title {
+  margin-top: 40px;
+  color: #56534c;
+  text-align: center;
+  font-family: "Alegreya", serif;
+  font-size: 24px;
+  line-height: 30px;
+  letter-spacing: 0.025em;
+  font-weight: bold;
+}
+.book__description {
+  margin-bottom: 40px;
+  color: #56534c;
+  text-align: center;
+  font-family: "ProximaNova", sans-serif;
+  font-size: 14px;
+  line-height: 30px;
+  letter-spacing: 0.05em;
+}
+.book__link {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 65px;
+  padding-right: 65px;
+  color: #a47d5e;
+  text-align: center;
+  background-color: transparent;
+  border: 1px solid #9e9c93;
+  font-size: 18px;
+  line-height: 30px;
 }
 .page-footer {
   max-width: 320px;
