--- a/css/style.css
+++ b/css/style.css
@@ -1109,8 +1109,6 @@ body {
   margin-right: auto;
   background-color: #f3f1e9;
   padding: 11px;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%, 0 90%);
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%, 0 95%);
 }
 .book::before {
   position: absolute;
@@ -1123,20 +1121,6 @@ body {
   width: auto;
   height: auto;
   border: 1px dashed #c3bfbb;
-}
-.book::after {
-  position: absolute;
-  z-index: 20;
-  bottom: 0px;
-  left: 0px;
-  content: "";
-  display: block;
-  width: 0px;
-  height: 0px;
-  border: 14px solid white;
-  border-bottom-color: transparent;
-  border-left-color: transparent;
-  box-shadow: 4px -4px 25px -2px rgba(0, 0, 0, 0.15);
 }
 .book__page {
   position: relative;
@@ -1227,6 +1211,7 @@ body {
   font-weight: bold;
 }
 .book__description {
+  margin-top: 0;
   margin-bottom: 40px;
   color: #56534c;
   text-align: center;
