--- a/less/blocks/book.less
+++ b/less/blocks/book.less
@@ -3,8 +3,8 @@
   .container(258px);
   background-color: #f3f1e9;
   padding: 11px;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%, 0 90%);
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%, 0 95%);
+  // -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%, 0 90%);
+  // clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%, 0 95%);
 
   &::before {
     position: absolute;
@@ -19,20 +19,20 @@
     border: 1px dashed #c3bfbb;
   }
 
-  &::after {
-    position: absolute;
-    z-index: 20;
-    bottom: 0px;
-    left: 0px;
-    content: "";
-    display: block;
-    width: 0px;
-    height: 0px;
-    border: 14px solid white;
-    border-bottom-color: transparent;
-    border-left-color: transparent;
-    box-shadow: 4px -4px 25px -2px rgba(0,0,0,.15);
-  }
+  // &::after {
+  //   position: absolute;
+  //   z-index: 20;
+  //   bottom: 0px;
+  //   left: 0px;
+  //   content: "";
+  //   display: block;
+  //   width: 0px;
+  //   height: 0px;
+  //   border: 14px solid white;
+  //   border-bottom-color: transparent;
+  //   border-left-color: transparent;
+  //   box-shadow: 4px -4px 25px -2px rgba(0,0,0,.15);
+  // }
 }
 
 .book__page {
@@ -129,6 +129,7 @@
 }
 
 .book__description {
+  margin-top: 0;
   margin-bottom: 40px;
   color: @gray;
   text-align: center;
