--- a/less/base/scaffolding.less
+++ b/less/base/scaffolding.less
@@ -5,7 +5,7 @@ html, body {
 }
 
 .button {
-  display: inline;
+  display: inline-block;
   padding: 20px 55px;
   text-decoration: none;
   font-family: "Alegreya", serif;
