mobile css for footer

--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -1,7 +1,19 @@
 .page-footer {
   .container();
+  padding-bottom: 50px;
+  background-color: #f3f1e9;
 }
 
 .page-footer__wrapper {
   .container(280px);
+}
+
+.page-footer__logo {
+  padding: 0;
+  padding-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 50px;
 }
