--- a/css/style.css
+++ b/css/style.css
@@ -490,6 +490,9 @@ body {
   font-size: 30px;
   font-family: "Scriptina", serif;
 }
+.logo__link--dark {
+  color: #56534c;
+}
 .navigation {
   position: absolute;
   top: 0;
@@ -1389,9 +1392,39 @@ body {
   max-width: 320px;
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 50px;
+  background-color: #f3f1e9;
 }
 .page-footer__wrapper {
   max-width: 280px;
   margin-left: auto;
   margin-right: auto;
+}
+.page-footer__logo {
+  padding: 0;
+  padding-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 50px;
+}
+.footer-nav__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.footer-nav__link {
+  color: #56534c;
+  font-family: "Alegreya", serif;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.1em;
+  font-weight: normal;
+  text-transform: uppercase;
+  text-decoration: none;
 }
