correction css for footer

--- a/less/blocks/footer-nav.less
+++ b/less/blocks/footer-nav.less
@@ -6,9 +6,15 @@
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
+  border-bottom: 1px solid #c2beba;
+  border-top: 1px solid #c2beba;
 }
 
+
 .footer-nav__link {
+  display: block;
+  padding-top: 10px;
+  padding-bottom: 10px;
   color: @gray;
   font-family: "Alegreya", serif;
   font-size: 14px;
