--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -1,5 +1,6 @@
 .page-footer {
   .container();
+  padding-top: 10px;
   padding-bottom: 50px;
   background-color: #f3f1e9;
 }
@@ -10,7 +11,7 @@
 
 .page-footer__logo {
   padding: 0;
-  padding-bottom: 20px;
+  padding-bottom: 15px;
   display: flex;
   justify-content: center;
   align-items: center;
